feat: add party, goal, and log record specifications with reflection method
Introduce new record types (party, goal, log) and a reflection method to the Third Brain Companion system. This includes specifications for maintaining party and goal records, along with scripts to refresh indexes for efficient querying. Updated README with details on record types and new refresh scripts.

--- a/definitions/20251130161618.md
+++ b/definitions/20251130161618.md
@@ -86,7 +86,8 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 	- To be used at the end of every interaction.
 	- To be used using the `vault` system methods.
 	- The Agent will use any tools available to record the interaction to its `vault` as specified in [Schema](#schema).
-	- If the Agent is unable to record, the Agent can request the Prime User to do in its stead.  
+	- If the Agent is unable to record, the Agent can request the Prime User to do in its stead.
+- See other `method-specification` for ones with detailed specifications.
 
 ## Extensions
 
