refactor: restructure project directories and update documentation
- Move definitions/ to tbc/specs/
- Move scripts/ to tbc/tools/
- Move extensions/ to tbc/extensions/
- Add .gitkeep files to assets/extensions/, dex/, and vault/
- Update README.md with new paths and instructions

BREAKING CHANGE: Directory paths have changed; update any references to old paths in scripts or configurations.

--- a/assets/specs/20251130161618.md
+++ b/assets/specs/20251130161618.md
@@ -73,8 +73,8 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 	- Steps
 		- Start a new `git` repository.
 		- Optionally sync with one or more `git` hosting.
-		- Copy all definitions into `definitions/` directory.
-		- Create a `root.md` as per [tbc-root-content-value](./20251130163650.md)
+		- Copy all definitions into `tbc/specs/` directory.
+		- Create a `tbc/root.md` as per [tbc-root-content-value](./20251130163650.md)
 		- `git commit`, and optionally `git push`.
 - Gather Context
 	- To be used at the start of every interaction.
@@ -92,7 +92,7 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 ## Extensions
 
 - An instance of TBC may extend [Specifications](#specifications): [Schema](#schema), [Actors](#actors), [Methods](#methods)
-- The directory of the extension definitions will be `extensions/`, but may be overridden in the `root.md` "Definition" section.
+- The directory of the extension definitions will be `tbc/extensions/`, but may be overridden in the `tbc/root.md` "Definition" section.
 
 ## Non-Specification Considerations
 
