docs: update setup instructions to include vault directory creation

--- a/assets/specs/20251130161618.md
+++ b/assets/specs/20251130161618.md
@@ -71,11 +71,12 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 - Instantiate Agent
 	- Only used by Prime User
 	- Steps
-		- Start a new `git` repository.
-		- Optionally sync with one or more `git` hosting.
-		- Copy all definitions into `tbc/specs/` directory.
-		- Create a `tbc/root.md` as per [tbc-root-content-value](./20251130163650.md)
-		- `git commit`, and optionally `git push`.
+	  - Start a new `git` repository.
+	  - Optionally sync with one or more `git` hosting.
+	  - Copy all definitions into `tbc/specs/` directory.
+	  - Create the `vault/` directory.
+	  - Create a `tbc/root.md` as per [tbc-root-content-value](./20251130163650.md)
+	  - `git commit`, and optionally `git push`.
 - Gather Context
 	- To be used at the start of every interaction.
 	- To be used using the `vault` system methods.
