refactor(specs): update specification types to definitions and add method specs
- Change specification_type from "record-specification" to "record-definition" and "method-specification" to "method-definition" across multiple spec files
- Rename "tbc-root-content-value" to "tbc-root-record" in relevant files
- Add new method definitions: instantiate-agent-method, gather-context-method, persist-memories-method
- Update main system definition to reference new method specs instead of inline descriptions
- Include reflection-method in the methods list

These changes standardize terminology and modularize method specifications for better maintainability.

--- a/assets/specs/20251130161618.md
+++ b/assets/specs/20251130161618.md
@@ -22,9 +22,25 @@ specification_dependencies:
     version: 1.0
     role: schema
   - id: 20251130163650
-    name: tbc-root-content-value
+    name: tbc-root-record
     version: 0.1
     role: schema
+  - id: 20251204141919
+    name: instantiate-agent-method
+    version: 0.1
+    role: method
+  - id: 20251204141920
+    name: gather-context-method
+    version: 0.1
+    role: method
+  - id: 20251204141921
+    name: persist-memories-method
+    version: 0.1
+    role: method
+  - id: 20251203071809
+    name: reflection-method
+    version: 0.1
+    role: method
 ---
 # Third Brain Companion System Definition 0.2
 
@@ -56,7 +72,7 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 			- optional
 			- generally present
 	- there will be a Root Record with following content specification
-		- [tbc-root-content-value](./20251130163650.md)
+		- [tbc-root-record](./20251130163650.md)
 
 ## Actors
 
@@ -65,30 +81,13 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 
 ## Methods
 
-- All methods specified by the `vault` system specified in [Schema](#schema) 
+- All methods specified by the `vault` system specified in [Schema](#schema)
 - All methods of `git` can be used by the Prime User
 - The Agent may use a method of `git` ONLY AFTER OBTAINING permission from the Prime User
-- Instantiate Agent
-	- Only used by Prime User
-	- Steps
-	  - Start a new `git` repository.
-	  - Optionally sync with one or more `git` hosting.
-	  - Copy all definitions into `tbc/specs/` directory.
-	  - Create the `vault/` directory.
-	  - Create a `tbc/root.md` as per [tbc-root-content-value](./20251130163650.md)
-	  - `git commit`, and optionally `git push`.
-- Gather Context
-	- To be used at the start of every interaction.
-	- To be used using the `vault` system methods.
-	- The TBC System Definitions and Root Record from `vault` will be provided as context at the start of the interaction.
-	- If the interaction's interface does not do it automatically, the Prime User will be responsible for providing the context.
-	- If the Root Record does not have the Agent Identity and Motivation inline, they should be retrieved using `vault`.
-- Persist Memories
-	- To be used at the end of every interaction.
-	- To be used using the `vault` system methods.
-	- The Agent will use any tools available to record the interaction to its `vault` as specified in [Schema](#schema).
-	- If the Agent is unable to record, the Agent can request the Prime User to do in its stead.
-- See other `method-specification` for ones with detailed specifications.
+- [instantiate-agent-method](./20251204141919.md)
+- [gather-context-method](./20251204141920.md)
+- [persist-memories-method](./20251204141921.md)
+- [reflection-method](./20251203071809.md)
 
 ## Extensions
 
