--- a/assets/specs/20251130163650.md
+++ b/assets/specs/20251130163650.md
@@ -5,8 +5,8 @@ record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-11-30 16:36:50 UTC
 record_title: TBC Root Content Value Definition 0.1
-specification_type: value-definition
-specification_name: tbc-root-content-value
+specification_type: record-definition
+specification_name: tbc-root-record
 specification_status: VERSIONED
 ---
 # TBC Root Content Value Definition 0.1
