--- a/assets/specs/20251203065943.md
+++ b/assets/specs/20251203065943.md
@@ -5,7 +5,7 @@ record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-03 06:59:43 UTC
 record_title: TBC Party Record Specification 0.1
-specification_type: record-specification
+specification_type: record-definition
 specification_name: tbc-party-record
 specification_status: VERSIONED
 ---
