--- a/assets/specs/20251203070834.md
+++ b/assets/specs/20251203070834.md
@@ -5,7 +5,7 @@ record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-03 07:08:34 UTC
 record_title: TBC Goal Record Specification 0.1
-specification_type: record-specification
+specification_type: record-definition
 specification_name: tbc-goal-record
 specification_status: VERSIONED
 ---
