--- a/assets/specs/20251203071809.md
+++ b/assets/specs/20251203071809.md
@@ -5,7 +5,7 @@ record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-03 07:18:09 UTC
 record_title: TBC Reflection Method Extension 0.1
-specification_type: method-specification
+specification_type: method-definition
 specification_name: reflection-method
 specification_status: VERSIONED
 ---
