feat: add TBC CLI engagement system and structure records
Introduce the TBC CLI Engagement System (0.1) to enable Agent and Prime User interactions with the system of records via command shell, including methods for validation, environment probing, initialization, and index refreshing. Add TBC Structure Record specification (0.1) for defining records that capture relationships and references to other records. Update existing specifications to integrate these components, bump versions (e.g., system definition to 0.3, root record to 0.2), and refine methods like Instantiate Agent and Gather Context to conditionally use the new CLI system. Additionally, update core generate-root operation to reference "Specifications" instead of "Definitions".

--- a/apps/tbc-cli/assets/specs/20251130161618.md
+++ b/apps/tbc-cli/assets/specs/20251130161618.md
@@ -12,7 +12,11 @@ specification_dependencies:
   - id: 20250507141631
     name: vault-system
     version: 1.0
-    role: schema
+    role: system
+  - id: 20251211062813
+    name: tbc-cli-engagement-system]
+    version: 0.1
+    role: system
   - id: 20250507141631
     name: id-field
     version: 1.0
@@ -23,6 +27,18 @@ specification_dependencies:
     role: schema
   - id: 20251130163650
     name: tbc-root-record
+    version: 0.2
+    role: schema
+  - id: 20251211065344
+    name: tbc-structure-record
+    version: 0.1
+    role: schema
+  - id: 20251203065943
+    name: tbc-party-record
+    version: 0.1
+    role: schema
+  - id: 20251203070834
+    name: tbc-goal-record
     version: 0.1
     role: schema
   - id: 20251204141919
@@ -42,7 +58,7 @@ specification_dependencies:
     version: 0.1
     role: method
 ---
-# Third Brain Companion System Definition 0.2
+# Third Brain Companion System Definition 0.3
 
 The purpose of a Third Brain Companion and its sub-systems is to provide an technology agnostic portable system to conceptualize, operate, and use an Agent for one Prime user or multiple Prime user group.
 
@@ -55,6 +71,7 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 - the system's sub-system of records must be as specified in [Schema](#schema); records may be must be in Markdown format and the front matter will have all fields except content
 - the system's sub-system of records must also store the TBC Definition as records
 - the fields specified must not be restricted by other systems using or extending this system
+- the system's sub-system of engagements must be specified in [Schema](#schema)
 - the methods may be restricted by any rules specified in other systems using this system
 
 ## Schema
@@ -71,8 +88,16 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 		- [content](./20250507144249.md)
 			- optional
 			- generally present
-	- there will be a Root Record with following content specification
-		- [tbc-root-record](./20251130163650.md)
+  - the records will generally be of following types
+    - [tbc-structure-record](./20251211065344.md)
+    - [tbc-party-record](./20251203065943.md)
+    - [tbc-goal-record](./20251203070834.md)
+    - other record types may be defined in [extensions](#extensions)
+- TBC-ROOT-RECORD
+  - there will be a Root Record with following content specification
+  - [tbc-root-record](./20251130163650.md)
+- [tbc-cli-engagement-system](./20251211062813.md)
+  - to be used by Actors in environments having capabililty to execute shell
 
 ## Actors
 
@@ -92,7 +117,7 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
 ## Extensions
 
 - An instance of TBC may extend [Specifications](#specifications): [Schema](#schema), [Actors](#actors), [Methods](#methods)
-- The directory of the extension definitions will be `tbc/extensions/`, but may be overridden in the `tbc/root.md` "Definition" section.
+- The directory of the extension definitions will be `tbc/extensions/`, but may be overridden in the `tbc/root.md` "Specifications" section.
 
 ## Non-Specification Considerations
 
