--- a/apps/tbc-cli/assets/specs/20251204141919.md
+++ b/apps/tbc-cli/assets/specs/20251204141919.md
@@ -21,7 +21,9 @@ This specification defines the Instantiate Agent method for the Third Brain Comp
 - Steps:
   - Start a new `git` repository.
   - Optionally sync with one or more `git` hosting.
-  - Copy all definitions into `tbc/specs/` directory.
-  - Create the `vault/` directory.
-  - Create a `tbc/root.md` as per [tbc-root-record](./20251130163650.md)
+  - IF TBC CLI Engagment System is available - use the 'Initailize TBC Root' Method
+  - ELSE
+    - Copy all definitions into `tbc/specs/` directory.
+    - Create the `vault/` directory.
+    - Create a `tbc/root.md` as per [tbc-root-record](./20251130163650.md)
   - `git commit`, and optionally `git push`.
