--- a/apps/tbc-cli/assets/specs/20251204141920.md
+++ b/apps/tbc-cli/assets/specs/20251204141920.md
@@ -21,6 +21,8 @@ This specification defines the Gather Context method for the Third Brain Compani
 - Steps:
   - To be used at the start of every interaction.
   - To be used using the `vault` system methods.
+  - IF TBC CLI Engagment System is available
+    - use the 'Probe Environment' Method
   - The TBC System Definitions and Root Record from `vault` will be provided as context at the start of the interaction.
   - If the interaction's interface does not do it automatically, the Prime User will be responsible for providing the context.
   - If the Root Record does not have the Agent Identity and Motivation inline, they should be retrieved using `vault`.
