--- a/apps/tbc-cli/assets/specs/20251130163650.md
+++ b/apps/tbc-cli/assets/specs/20251130163650.md
@@ -4,12 +4,12 @@ record_type: specification
 record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-11-30 16:36:50 UTC
-record_title: TBC Root Content Value Definition 0.1
+record_title: TBC Root Content Value Definition 0.2
 specification_type: record-definition
 specification_name: tbc-root-record
 specification_status: VERSIONED
 ---
-# TBC Root Content Value Definition 0.1
+# TBC Root Content Value Definition 0.2
 
 The root content of the Third Brain Companion System.
 
@@ -28,6 +28,7 @@ The root content of the Third Brain Companion System.
 	- the front matter may contain other non-canonical fields and values
 - name: body
 	- value will be markdown content starting with a first level heading
+	- the value is a special case of the [tbc-structure-record](./20251211065344.md)
 	- the value is used as a map to various other records as required by the system
 	- the body will contain following, either inline or linked to another record or both
 		- Definition - the Interface between the Prime User and Agent automatically, or the Prime User should use this section to refer to the definition (system, field, value, etc) and follow it for the rest of the sections.
