feat(cli): add ID generation commands for UUID v7 and timestamp IDs
Add new 'gen' command with subcommands 'uuid' and 'tsid' to generate unique identifiers, including support for generating multiple IDs. Introduces a new TBC Generator plugin package for core ID generation operations. Updates CLI specifications, bootstrap, and documentation accordingly.

--- a/apps/tbc-cli/assets/specs/20251130161618.md
+++ b/apps/tbc-cli/assets/specs/20251130161618.md
@@ -14,8 +14,8 @@ specification_dependencies:
     version: 1.0
     role: system
   - id: 20251211062813
-    name: tbc-cli-engagement-system]
-    version: 0.1
+    name: tbc-cli-engagement-system
+    version: 0.2
     role: system
   - id: 20250507141631
     name: id-field
