--- a/apps/tbc-cli/assets/specs/20251211062813.md
+++ b/apps/tbc-cli/assets/specs/20251211062813.md
@@ -4,12 +4,12 @@ record_type: specification
 record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-11 06:23:13 UTC
-record_title: TBC CLI Engagement System Definition 0.1
+record_title: TBC CLI Engagement System Definition 0.2
 specification_type: system-definition
 specification_name: tbc-cli-engagement-system
 specification_status: VERSIONED
 ---
-# TBC CLI Engagement System Definition 0.1
+# TBC CLI Engagement System Definition 0.2
 
 The purpose of TBC CLI Engagement System is to provide the Agent and Prime User with methods to interact with the system of records like Vault (but not limited to it).
 
@@ -42,6 +42,10 @@ The purpose of TBC CLI Engagement System is to provide the Agent and Prime User 
   - collates the core system specification index
 - Refresh Records Index
   - collates the records index by record types
+- Generate UUID
+  - generate one or more UUID v7 identifiers
+- Generate Timestamp ID
+  - generate one or more UTC timestamp IDs in YYYYMMDDHHmmSS format
 
 
 ## Non-Specification Considerations
@@ -69,6 +73,7 @@ Commands:
   probe           Probe the environment for TBC CLI and system information
   init [options]  Initialize a new TBC companion directory
   dex [options]   Refresh indexes
+  gen [options]   Generate IDs
   help [command]  display help for command
 ```
 
@@ -96,5 +101,21 @@ Options:
 Commands:
   core            Refresh the core system definitions index
   records         Refresh all records indexes
+  help [command]  display help for command
+```
+
+```bash
+❯ tbc help gen
+Usage: tbc gen [options] [command]
+
+Generate IDs
+
+Options:
+  --root <path>   Root directory
+  -h, --help      display help for command
+
+Commands:
+  uuid            Generate a UUID v7
+  tsid            Generate a timestamp ID
   help [command]  display help for command
 ```
