feat(tbc-cli): add extensions indexing support to engagement system
Update system specifications to version 0.3, including new "Refresh Extensions Index" functionality and corresponding CLI command for collating extensions index. This enhances the TBC CLI Engagement System to provide comprehensive indexing capabilities.

--- a/apps/tbc-cli/assets/specs/20251211062813.md
+++ b/apps/tbc-cli/assets/specs/20251211062813.md
@@ -4,12 +4,12 @@ record_type: specification
 record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-11 06:23:13 UTC
-record_title: TBC CLI Engagement System Definition 0.2
+record_title: TBC CLI Engagement System Definition 0.3
 specification_type: system-definition
 specification_name: tbc-cli-engagement-system
 specification_status: VERSIONED
 ---
-# TBC CLI Engagement System Definition 0.2
+# TBC CLI Engagement System Definition 0.3
 
 The purpose of TBC CLI Engagement System is to provide the Agent and Prime User with methods to interact with the system of records like Vault (but not limited to it).
 
@@ -42,6 +42,8 @@ The purpose of TBC CLI Engagement System is to provide the Agent and Prime User 
   - collates the core system specification index
 - Refresh Records Index
   - collates the records index by record types
+- Refresh Extensions Index
+  - collates the extensions index
 - Generate UUID
   - generate one or more UUID v7 identifiers
 - Generate Timestamp ID
@@ -101,6 +103,7 @@ Options:
 Commands:
   core            Refresh the core system definitions index
   records         Refresh all records indexes
+  extensions      Refresh extensions index
   help [command]  display help for command
 ```
 
