docs: clarify core and extensions index descriptions
- Specify that core index provides full content, while records and extensions provide summary only
- Update generate-root template to include extensions link and clarify content types for better user guidance

--- a/apps/tbc-cli/assets/specs/20251211062813.md
+++ b/apps/tbc-cli/assets/specs/20251211062813.md
@@ -39,16 +39,15 @@ The purpose of TBC CLI Engagement System is to provide the Agent and Prime User 
   - a new TBC companion directory
   - used by Prime User to Instantiate a new Companion Agent
 - Refresh Core Index
-  - collates the core system specification index
+  - collates the core system specification index - full content
 - Refresh Records Index
-  - collates the records index by record types
+  - collates the records index by record types - summary only
 - Refresh Extensions Index
-  - collates the extensions index
+  - collates the extensions index - summary only
 - Generate UUID
   - generate one or more UUID v7 identifiers
 - Generate Timestamp ID
   - generate one or more UTC timestamp IDs in YYYYMMDDHHmmSS format
-
 
 ## Non-Specification Considerations
 
