docs(tbc-cli): update TBC Reflection Method specification to version 0.2
Extend the Reflection Method spec with new core concepts including Reflection Target,
Reflection Pass, and Pending Reflection State. Refine method steps for target
identification, artifact gathering, fact extraction, resolution, persistence,
and logging. Add guarantees and non-goals to clarify scope and determinism.

--- a/apps/tbc-cli/assets/specs/20251203071809.md
+++ b/apps/tbc-cli/assets/specs/20251203071809.md
@@ -4,33 +4,139 @@ record_type: specification
 record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-03 07:18:09 UTC
-record_title: TBC Reflection Method Extension 0.1
+record_title: TBC Reflection Method Extension 0.2
 specification_type: method-definition
 specification_name: reflection-method
 specification_status: VERSIONED
 ---
-# TBC Reflection Method Specification 0.1
+# TBC Reflection Method Specification 0.2
 
-This specification adds the Reflection Method to the Third Brain Companion System, allowing the agent to reflect on past interactions and maintain records of parties and goals.
+This specification defines the Reflection Method for the Third Brain Companion System, enabling the agent to analyze accumulated artifacts, extract and update knowledge about parties and goals, and record the completion of reflective passes in a deterministic and traceable manner.
 
-## Specifications
+## Core Concepts
 
-- This extends the [Methods](#methods) of the TBC System as defined in the Third Brain Companion System Definition.
+### Reflection Target
 
-- New method: Reflection Method
-  - Purpose: To analyze past interactions, extract relevant facts about parties and goals, and ensure corresponding records are created or updated in the vault.
-  - Steps:
-    - Read a particular interaction from memory (using vault Fetch Record By ID method).
-    - Extract facts about parties and goals mentioned or implied in the interaction.
-    - Run refresh-party.sh and refresh-goal.sh scripts to update dex/party.md and dex/goal.md indexes if available.
-    - Identify existing party records by referring to dex/party.md (an index of party records).
-    - Identify existing goal records by referring to dex/goal.md (an index of goal records).
-    - For each extracted party or goal:
-      - If an existing record is found, update it with new facts if necessary.
-      - If no existing record is found, prepare to create a new record.
-      - Before creating a new record, confirm with the Prime User.
-      - If creating a record, obtain a UUID v7 for the id; the agent may use the `uuidv7` command if available (as installed by the Prime User), otherwise request it from the Prime User.
-    - Persist any new or updated records using the vault Store Record By ID method.
-    - Create a new log record (record_type: 'log', log_type: 'reflection') documenting the actions taken during this reflection, including parties/goals processed, records created/updated, and any confirmations obtained.
-  - Actors: Agent (primary), Prime User (for confirmation and UUID provision).
-  - This method may be invoked periodically or on-demand to maintain accurate party and goal records.
+A **Reflection Target** is the explicitly declared scope of artifacts to be reflected upon.
+
+A Reflection Target may consist of:
+
+* One or more vault record IDs
+* A symbolic grouping of records (e.g. "all records marked PENDING-REFLECTION up to <date>")
+* A set of artifacts produced externally and persisted in the vault or any other collection.
+
+The Reflection Target **must be identified before reflection begins**.
+
+### Reflection Pass
+
+A **Reflection Pass** is a single execution of the Reflection Method over a declared Reflection Target.
+
+Multiple Reflection Passes may occur over:
+
+* The same target (over time)
+* Overlapping targets
+* Supersets or subsets of previous targets
+
+Completion of a Reflection Pass does **not** preclude future reflection.
+
+### Pending Reflection State
+
+Artifacts may be marked as **PENDING-REFLECTION** to indicate that they are intentionally awaiting reflective processing.
+
+This state:
+
+* Is advisory, not an error
+* Indicates deferred cognition
+* Is cleared only by a completed Reflection Pass that includes the artifact in its Reflection Target
+
+## Method Definition
+
+### Method Name
+
+Reflection
+
+### Purpose
+
+To analyze a declared set of artifacts, extract or update facts about parties and goals, and record the completion of a reflective pass in the vault.
+
+### Actors
+
+* Agent (primary)
+* Prime User (for confirmation where required)
+
+## Steps
+
+### 1. Identify and Confirm the Reflection Target
+
+* The Agent identifies a candidate Reflection Target.
+* The Reflection Target **must be explicitly declared**.
+* If the target is ambiguous or symbolic, the Agent confirms the scope with the Prime User.
+
+### 2. Gather Artifacts
+
+* The Agent retrieves all artifacts in the Reflection Target using vault methods.
+* Indexes (e.g. `dex/*`) may be consulted as hints but **must not be treated as authoritative**.
+
+### 3. Analyze and Extract Facts
+
+* The Agent analyzes the artifacts to identify:
+
+  * Parties mentioned or implied
+  * Goals mentioned, progressed, completed, or abandoned
+* Extraction is analytical only; no persistence occurs in this step.
+
+### 4. Resolve Parties and Goals
+
+For each extracted party or goal:
+
+- Attempt to match against existing records using:
+  - Vault records directly
+  - Indexes as non-authoritative aids
+- If a matching record exists:
+  - Update it with new facts if necessary
+- If no matching record exists:
+  - Prepare to create a new record
+  - **Obtain confirmation from the Prime User before creation**
+
+### 5. Persist Updates
+
+- Persist any new or updated party or goal records using vault Store Record By ID.
+- UUID v7 generation follows existing system rules.
+
+### 6. Record Reflection Completion
+
+- Create a new log record with:
+  - `record_type: log`
+  - `log_type: reflection`
+
+The Reflection Log **must include**:
+
+- The declared Reflection Target (explicitly listed or symbolically described)
+- Summary of parties and goals processed
+- Records created or updated
+- Any confirmations obtained
+
+This log serves as the **completion marker** for the Reflection Pass.
+
+### 7. Ensure Cross Linking
+
+- Updates to party, goal, or other record should link back to the reflection record
+- Both the targets of reflections and the new or updated records should be linked in the reflection
+
+### 7. Update Pending Reflection State (Optional but Recommended)
+
+* Artifacts included in the Reflection Target may have their `PENDING-REFLECTION` markers removed or annotated as reflected.
+* This step is advisory and does not affect correctness.
+
+## Guarantees
+
+A Reflection Pass is considered complete if and only if:
+
+* A Reflection Log exists
+* The log explicitly declares its Reflection Target
+
+## Non-Goals
+
+* This method does not impose temporal cadence
+* This method does not prevent future reflection on the same artifacts
+* This method does not require indexes to be up-to-date
