docs(tbc-cli): update TBC Reflection Method specification to version 0.3
- Added new step "9. Update Map of Memories" to the reflection process
- Bumped CLI version to 0.1.2 and updated dependencies to use version ranges
- Updated user guide to require Node.js v22+

BREAKING CHANGE: Node.js version requirement increased from v18+ to v22+

--- a/apps/tbc-cli/assets/specs/20251203071809.md
+++ b/apps/tbc-cli/assets/specs/20251203071809.md
@@ -4,12 +4,12 @@ record_type: specification
 record_tags:
   - c/personal/k.mahesh.bhat
 record_create_date: 2025-12-03 07:18:09 UTC
-record_title: TBC Reflection Method Extension 0.2
+record_title: TBC Reflection Method Extension 0.3
 specification_type: method-definition
 specification_name: reflection-method
 specification_status: VERSIONED
 ---
-# TBC Reflection Method Specification 0.2
+# TBC Reflection Method Specification 0.3
 
 This specification defines the Reflection Method for the Third Brain Companion System, enabling the agent to analyze accumulated artifacts, extract and update knowledge about parties and goals, and record the completion of reflective passes in a deterministic and traceable manner.
 
@@ -122,11 +122,15 @@ This log serves as the **completion marker** for the Reflection Pass.
 
 - Updates to party, goal, or other record should link back to the reflection record
 - Both the targets of reflections and the new or updated records should be linked in the reflection
-
-### 7. Update Pending Reflection State (Optional but Recommended)
+### 8. Update Pending Reflection State (Optional but Recommended)
 
 * Artifacts included in the Reflection Target may have their `PENDING-REFLECTION` markers removed or annotated as reflected.
+
 * This step is advisory and does not affect correctness.
+
+### 9. Update Map of Memories
+
+* Add the new reflection log to the Reflections section in the Map of Memories for future reference.
 
 ## Guarantees
 
