refactor(cli): move count option to gen command
Update the 'gen' command to accept the count option globally, allowing it to be shared across subcommands like 'uuid' and 'tsid'. This improves CLI usability by avoiding redundant option definitions. Also refine asset path resolution in init-flow for better cross-environment compatibility and bump version to 0.1.3. Update corresponding documentation in specs.

--- a/apps/tbc-cli/assets/specs/20251211062813.md
+++ b/apps/tbc-cli/assets/specs/20251211062813.md
@@ -113,11 +113,12 @@ Usage: tbc gen [options] [command]
 Generate IDs
 
 Options:
-  --root <path>   Root directory
-  -h, --help      display help for command
+  --root <path>         Root directory
+  -c, --count <number>  Number of IDs to generate (default: "1")
+  -h, --help            display help for command
 
 Commands:
-  uuid            Generate a UUID v7
-  tsid            Generate a timestamp ID
-  help [command]  display help for command
+  uuid                  Generate a UUID v7
+  tsid                  Generate a timestamp ID
+  help [command]        display help for command
 ```
