feat(tbc-specs): update TBC specifications and add note record spec
- Add tbc-note-record specification dependency and reference in system definitions
- Update reflection-method version to 0.3 and refine pending reflection state description
- Expand party record types to include 'org'
- Enhance gather context method with additional steps for context retrieval
- Introduce new TBC Note Record Specification 0.1 for general information storage

--- a/apps/tbc-cli/assets/specs/20251130161618.md
+++ b/apps/tbc-cli/assets/specs/20251130161618.md
@@ -41,6 +41,10 @@ specification_dependencies:
     name: tbc-goal-record
     version: 0.1
     role: schema
+  - id: 20251219100510
+    name: tbc-note-record
+    version: 0.1
+    role: schema
   - id: 20251204141919
     name: instantiate-agent-method
     version: 0.1
@@ -55,7 +59,7 @@ specification_dependencies:
     role: method
   - id: 20251203071809
     name: reflection-method
-    version: 0.1
+    version: 0.3
     role: method
 ---
 # Third Brain Companion System Definition 0.3
@@ -92,6 +96,8 @@ The purpose of a Third Brain Companion and its sub-systems is to provide an tech
     - [tbc-structure-record](./20251211065344.md)
     - [tbc-party-record](./20251203065943.md)
     - [tbc-goal-record](./20251203070834.md)
+    - [tbc-log-record](./20251203073306.md)
+    - [tbc-note-record](./20251219100510.md)
     - other record types may be defined in [extensions](#extensions)
 - TBC-ROOT-RECORD
   - there will be a Root Record with following content specification
