--- a/apps/tbc-cli/assets/specs/20251203065943.md
+++ b/apps/tbc-cli/assets/specs/20251203065943.md
@@ -26,7 +26,7 @@ The party record will be used by Agent to identify all parties - person (includi
 			- this will be a list of values, but will contain only one value
 			- the first `agent` classifier will be identity of the TBC agent - example: `c/agent/tessera`
 		- name: party_type
-			- the value can be 'person', 'agent', 'team'
+			- the value can be 'person', 'agent', 'team', 'org'
 	- the front matter may contain other non-canonical fields and values
 - name: body
 	- value will be markdown content starting with a first level heading
