--- a/apps/tbc-cli/assets/specs/20251203071809.md
+++ b/apps/tbc-cli/assets/specs/20251203071809.md
@@ -41,7 +41,7 @@ Completion of a Reflection Pass does **not** preclude future reflection.
 
 ### Pending Reflection State
 
-Artifacts may be marked as **PENDING-REFLECTION** to indicate that they are intentionally awaiting reflective processing.
+Artifacts may be marked or placed in structure record as **PENDING-REFLECTION** to indicate that they are intentionally awaiting reflective processing.
 
 This state:
 
@@ -122,9 +122,10 @@ This log serves as the **completion marker** for the Reflection Pass.
 
 - Updates to party, goal, or other record should link back to the reflection record
 - Both the targets of reflections and the new or updated records should be linked in the reflection
+
 ### 8. Update Pending Reflection State (Optional but Recommended)
 
-* Artifacts included in the Reflection Target may have their `PENDING-REFLECTION` markers removed or annotated as reflected.
+* Artifacts included in the Reflection Target may have their **PENDING-REFLECTION** markers removed or annotated as reflected or be removed from **PENDING-REFLECTION** structure record..
 
 * This step is advisory and does not affect correctness.
 
