feat(tbc-specs): add record_create_date field to record specifications
- Add record_create_date field to party, goal, structure, and note records
- Replace log_timestamp with record_create_date in log record for consistency
- Standardizes creation timestamp across all record types in TBC specs

--- a/apps/tbc-cli/assets/specs/20251203065943.md
+++ b/apps/tbc-cli/assets/specs/20251203065943.md
@@ -25,6 +25,8 @@ The party record will be used by Agent to identify all parties - person (includi
 		- name: record_tags
 			- this will be a list of values, but will contain only one value
 			- the first `agent` classifier will be identity of the TBC agent - example: `c/agent/tessera`
+		- name: record_create_date
+			- the value will be the timestamp when the party was created
 		- name: party_type
 			- the value can be 'person', 'agent', 'team', 'org'
 	- the front matter may contain other non-canonical fields and values
