--- a/apps/tbc-cli/assets/specs/20251203070834.md
+++ b/apps/tbc-cli/assets/specs/20251203070834.md
@@ -25,6 +25,8 @@ The goal record is used by the agent to record its own goals or its perspective 
 		- name: record_tags
 			- this will be a list of values, but will contain only one value
 			- the first `agent` classifier will be identity of the TBC agent - example: `c/agent/tessera`
+		- name: record_create_date
+			- the value will be the timestamp when the goal was created
 		- name: goal_owner
 			- the value will be the party id of the goal owner
 		- name: goal_type
