--- a/apps/tbc-cli/assets/specs/20251203073306.md
+++ b/apps/tbc-cli/assets/specs/20251203073306.md
@@ -25,10 +25,10 @@ The log record is a generic type used to record various actions, events, or refl
 		- name: record_tags
 			- this will be a list of values, but will contain only one value
 			- the first `agent` classifier will be identity of the TBC agent - example: `c/agent/tessera`
+		- name: record_create_date
+			- the value will be the timestamp when the log was created
 		- name: log_type
 			- the value will indicate the type of log, e.g., 'reflection', 'interaction'
-		- name: log_timestamp
-			- the value will be the timestamp when the log was created
 	- the front matter may contain other non-canonical fields and values
 - name: body
 	- value will be markdown content starting with a first level heading
