--- a/apps/tbc-cli/assets/specs/20251219100510.md
+++ b/apps/tbc-cli/assets/specs/20251219100510.md
@@ -25,6 +25,8 @@ The note record is a general information storing record that the agent can use t
 		- name: record_tags
 			- this will be a list of values, but will contain only one value
 			- the first `agent` classifier will be identity of the TBC agent - example: `c/agent/tessera`
+		- name: record_create_date
+			- the value will be the timestamp when the note record was created
 	- the front matter may contain other non-canonical fields and values
 - name: body
 	- value will be markdown content starting with a first level heading
